# shazart

./: .gitignore  Dockerfile  README.md  app.py  cv.py  data.py  helper.py  multimodel_retrieval.py  pyproject.toml  train.py
